changes to integrate with BFF: context path, set redirect url to bff through reverse proxy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ custom.password.idless.encoder="scrypt"
 spring.datasource.url=jdbc:mysql://localhost:3306/identity_hub
 spring.datasource.username=root
 spring.datasource.password=CcmN*`6@3T9H%P#yg^V<7v
+
+server.servlet.contextPath=/auth
+server.forward-headers-strategy=framework
