Logout Redirect Uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.datasource.password=CcmN*`6@3T9H%P#yg^V<7v
 
 server.servlet.contextPath=/auth
 server.forward-headers-strategy=framework
+
+#trace=true
