--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.derbyware.registration</groupId>
+	<groupId>nidam</groupId>
 	<artifactId>token-generator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>token-generator</name>
