Introduce rate-limiting support for login failures through the new LoginFailureAuditor interface; document its implementations including RealLoginFailureAuditor; update OAuth2AwareFailureHandler to delegate failure tracking to the auditor; add OAuth2AwareSuccessHandler to reset failure state on successful login;; include AuditorStartupLogger to log the active auditor at startup for visibility; collectively enhance authentication flow with configurable lockout thresholds and time-based failure cleanup

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,12 @@ spring:
     username: root
     password: CcmN*`6@3T9H%P#yg^V<7v
 
+rate-limiter:
+  enabled: true
+  lockout-duration: 5    # minutes
+  max-attempts: 5
+  cleanup-interval-ms: 60000      # miliseconds
+
 #logging:
 #  level:
 #    root: INFO
