--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,19 +53,19 @@ rate-limiter:
   max-attempts: 5
   cleanup-interval-ms: 60000      # miliseconds
 
-#logging:
-#  level:
-#    root: INFO
-#    org.springframework: INFO
-#    org.springframework.security: INFO
-#    org.springframework.security.oauth2: INFO
-#    org.springframework.web: INFO
-#    reactor.netty: INFO
-#    io.netty: INFO
-#    io.projectreactor:
-##    org.apache.tomcat.util.net.NioEndpoint: INFO
-#    org.apache.tomcat: INFO
-#    org.springframework.boot: INFO
-#    org.springframework.beans: INFO
-#    org.apache.catalina.session.ManagerBase: INFO
-trace: true
+logging:
+  level:
+    root: INFO
+    org.springframework: INFO
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: INFO
+    org.springframework.web: INFO
+    reactor.netty: INFO
+    io.netty: INFO
+    io.projectreactor:
+#    org.apache.tomcat.util.net.NioEndpoint: INFO
+    org.apache.tomcat: INFO
+    org.springframework.boot: INFO
+    org.springframework.beans: INFO
+    org.apache.catalina.session.ManagerBase: INFO
+#trace: true
