--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ issuer: ${reverse-proxy-uri}${authorization-server-prefix}
 
 bff-prefix: /bff
 react-prefix: /react-ui
+bff-post-logout-endpoint: /post-logout
 
 client:
   id: client
@@ -16,6 +17,7 @@ client:
   internal-identifier: nidam-bff-internal-id
   login-uri: ${reverse-proxy-uri}${bff-prefix}/login/oauth2/code/token-generator
   logout-uri: ${reverse-proxy-uri}${react-prefix}
+  bff-post-logout-uri: ${reverse-proxy-uri}${bff-prefix}${bff-post-logout-endpoint}     # TODO this change will break docker-compose.yml: update file
 
 
 server:
@@ -51,19 +53,19 @@ rate-limiter:
   max-attempts: 5
   cleanup-interval-ms: 60000      # miliseconds
 
-logging:
-  level:
-    root: INFO
-    org.springframework: INFO
-    org.springframework.security: INFO
-    org.springframework.security.oauth2: INFO
-    org.springframework.web: INFO
-    reactor.netty: INFO
-    io.netty: INFO
-    io.projectreactor:
-#    org.apache.tomcat.util.net.NioEndpoint: INFO
-    org.apache.tomcat: INFO
-    org.springframework.boot: INFO
-    org.springframework.beans: INFO
-    org.apache.catalina.session.ManagerBase: INFO
-#trace: true
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework: INFO
+#    org.springframework.security: INFO
+#    org.springframework.security.oauth2: INFO
+#    org.springframework.web: INFO
+#    reactor.netty: INFO
+#    io.netty: INFO
+#    io.projectreactor:
+##    org.apache.tomcat.util.net.NioEndpoint: INFO
+#    org.apache.tomcat: INFO
+#    org.springframework.boot: INFO
+#    org.springframework.beans: INFO
+#    org.apache.catalina.session.ManagerBase: INFO
+trace: true
